# forgeml

./: .gitignore  docker-compose.yml
backend/: alembic.ini  dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 61594e9c56d7_create_users_table.py
backend/app/: main.py
backend/app/auth/: hashing.py  jwt.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: user.py
backend/app/schemas/: user.py
backend/app/services/: user_service.py
